<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:background="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_school"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:padding="20dp"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            android:textAlignment="gravity"
            android:textColor="@color/windowBackground"
            android:textSize="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/username"
            android:textColor="@color/textColorPrimary"
            android:id="@+id/textView2"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorPrimary"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorPrimary"
            android:textSize="18dp"
            android:text="@string/password"
            android:id="@+id/textView3" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/textColorPrimary"
            android:inputType="textPassword"
            android:id="@+id/password"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/login"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/shape"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:id="@+id/register"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/shape"
            />



    </LinearLayout>
</ScrollView>